# minile-scryptpoetry-linux

./: .gitignore  LICENSE  Procfile  README.md  chat.js  index.html  manifest.json  pyproject.toml  requirements.txt  style.css
arianna_core/: 6th_feeling.py  __init__.py  __main__.py  config.py  entropy_resonance.py  evolution_safe.py  evolution_steps.py  genesis.py  le_persona_prompt.md  local_rag.py  logging_config.py  metrics.py  mini_le.py  minilerobot.py  model.txt  objectivity.py  pain.py  server.py  skin.py  skryptbridge.py  state.py
arianna_core/bio/: __init__.py  cell_resonance.py  love_field.py  orchestra.py  pain_marker.py
arianna_core/collective/: __init__.py  echo_feed.py
arianna_core/memory/: __init__.py  bone_memory.py  echo_lung.py
arianna_core/rag/: __init__.py  hashed_vector.py
datasets/: Arianna-Method-v2.9.md  Cain.md  Haze.md  SUPPERTIME (v2.0).md  mirror-field-organism-dataset-01.md  mirror-field-organism-dataset-02.md
skryptpoetry/: noProcfile  symphony.py
skryptpoetry/arianna_linux/: Dockerfile  letsgo.py
skryptpoetry/tongue/: prelanguage.md
